--- a/naunet/templates/base/cpp/include/naunet_physics.h.j2
+++ b/naunet/templates/base/cpp/include/naunet_physics.h.j2
@@ -2,7 +2,7 @@
 #ifndef __NAUNET_PHYSICS_H__
 #define __NAUNET_PHYSICS_H__
 
-/* {% if info.device == "gpu" %} */
+/* {% if general.device == "gpu" %} */
 __device__ __host__ double GetElementAbund(double *y, int elemidx);
 __device__ __host__ double GetMantleDens(double *y);
 __device__ __host__ double GetHNuclei(double *y);
