--- a/naunet/templates/cvode/include/naunet_ode.h.j2
+++ b/naunet/templates/cvode/include/naunet_ode.h.j2
@@ -5,16 +5,18 @@
 #include <sundials/sundials_nvector.h>
 #include <sundials/sundials_types.h>  // defs. of realtype, sunindextype
 
-#include "naunet_macros.h"
 #include "naunet_data.h"
+#include "naunet_macros.h"
 
-/* {% if info.device == "gpu" -%} */
+/* {% if general.device == "gpu" -%} */
 __device__ int EvalRates(realtype *k, realtype *y, NaunetData *user_data);
 #if NHEATPROCS
-__device__ int EvalHeatingRates(realtype *kc, realtype *y, NaunetData *user_data);
+__device__ int EvalHeatingRates(realtype *kc, realtype *y,
+                                NaunetData *user_data);
 #endif
 #if NCOOLPROCS
-__device__ int EvalCoolingRates(realtype *kc, realtype *y, NaunetData *user_data);
+__device__ int EvalCoolingRates(realtype *kc, realtype *y,
+                                NaunetData *user_data);
 #endif
 /* {% else -%} */
 int EvalRates(realtype *k, realtype *y, NaunetData *user_data);
@@ -29,7 +31,7 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data);
 int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
         N_Vector tmp1, N_Vector tmp2, N_Vector tmp3);
 
-/* {% if info.method == "cusparse" -%} */
+/* {% if general.method == "cusparse" -%} */
 int InitJac(SUNMatrix jmatrix);
 /* {% else -%} */
 int Jtv(N_Vector v, N_Vector jv, realtype t, N_Vector u, N_Vector fu,
