--- a/naunet/templates/cvode/src/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/src/CMakeLists.txt.j2
@@ -22,7 +22,7 @@ if(NOT "CUDA" IN_LIST languages)
     )
 endif()
 
-{% if info.device == "gpu" -%}
+{% if general.device == "gpu" -%}
 foreach(name ${OBJTARGETS})
     add_library(
         ${name}
@@ -38,9 +38,7 @@ foreach(name ${OBJTARGETS})
         ${name}
             PUBLIC
                 ${CMAKE_SOURCE_DIR}/include
-                {% if info.device == "gpu" -%}
                 ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
-                {%- endif %}
     )
     target_link_libraries(
         ${name}
@@ -77,7 +75,7 @@ if(MAKE_SHARED)
             PROPERTIES
                 OUTPUT_NAME naunet
     )
-    {% if info.device == "gpu" -%}
+    {% if general.device == "gpu" -%}
     set_target_properties(
         naunet_shared
             PROPERTIES
@@ -118,7 +116,7 @@ if(MAKE_STATIC)
             PROPERTIES
                 OUTPUT_NAME naunet
     )
-    {% if info.device == "gpu" -%}
+    {% if general.device == "gpu" -%}
     set_target_properties(
         naunet_static
             PROPERTIES
@@ -175,7 +173,7 @@ if(MAKE_PYTHON)
 
     set_target_properties(${PYMODNAME}
         PROPERTIES
-            {% if info.device == "gpu" -%}
+            {% if general.device == "gpu" -%}
             CUDA_SEPARABLE_COMPILATION ON
             {% endif -%}
             PREFIX "${PYTHON_MODULE_PREFIX}"
