--- a/naunet/templates/odeint/src/naunet.cpp.j2
+++ b/naunet/templates/odeint/src/naunet.cpp.j2
@@ -5,7 +5,7 @@
 #include "naunet_macros.h"
 #include "naunet_ode.h"
 #include "naunet_physics.h"
-/* {% if "VB88Table" in physics.coshielding -%} */
+/* {% if network.shielding.get("CO") == "VB88Table" -%} */
 #include "naunet_constants.h"
 #include "naunet_utilities.h"
 /* {% endif -%} */
@@ -33,7 +33,7 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     rtol_     = rtol;
     errfp_    = fopen("naunet_error_record.txt", "a");
 
-    /* {% if "VB88Table" in physics.coshielding -%} */
+    /* {% if network.shielding.get("CO") == "VB88Table" -%} */
 
     // TODO: The result is not saved
     // double *x1  = vector(1, 6);
