--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -30,12 +30,12 @@ int InitJac(SUNMatrix jmatrix) {
     // clang-format off
     // number of non-zero elements in each row
     int rowptrs[NEQUATIONS + 1] = { 
-        {{ ode.spjacrptrarr | stmwrap(80, 8) }}
+        {{ ode.jac.rows | map(str) | join(", ") | stmwrap(80, 8) }}
     };
 
     // the column index of non-zero elements
     int colvals[NNZ] = {
-        {{ ode.spjaccvalarr | stmwrap(80, 8) }}
+        {{ ode.jac.cols | map(str) | join(", ") | stmwrap(80, 8) }}
     };
 
     // clang-format on
@@ -84,8 +84,8 @@ __global__ void JacKernel(realtype *y, realtype *data, NaunetData *d_udata,
 #endif
 
         // clang-format off
-        {% for data in ode.spjacdata -%}
-            {{ data | replace("data[", "data[jistart + ") | replace("y[IDX", "y_cur[IDX") | stmwrap(80, 12) }}
+        {% for data in ode.jac.vals -%}
+            data[jistart + {{loop.index0}}] = {{ data | replace("y[IDX", "y_cur[IDX") | stmwrap(80, 12) }};
         {% endfor %}
         // clang-format on
     }
@@ -125,9 +125,14 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     SUNMatZero(jmatrix);
 
     // clang-format off
-    {% for eq in ode.jac -%}
-        {{ eq | stmwrap(80, 8) }}
-    {% endfor %}  // clang-format on
+    // TODO: move neqns out from jac
+    {% for l, r in zip(ode.jac.lhs, ode.jac.rhs) -%}
+    {% if r != "0.0" -%}
+    {{ l }} = {{ r | stmwrap(80, 8) }};
+    {% endif -%}
+    {% endfor %}
+
+    // clang-format on
 
     /* {% elif general.method == "sparse" -%} */
     realtype *y            = N_VGetArrayPointer(u);
@@ -163,18 +168,18 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
 
     // clang-format off
     // number of non-zero elements in each row
-    {% for rptr in ode.spjacrptr -%}
-        {{ rptr }}
+    {% for row in ode.jac.rows -%}
+        rowptrs[{{ loop.index0 }}] = {{ row }};
     {% endfor %}
 
     // the column index of non-zero elements
-    {% for cval in ode.spjaccval -%}
-        {{ cval }}
+    {% for col in ode.jac.cols -%}
+        colvals[{{ loop.index0 }}] = {{ col }};
     {% endfor %}
 
     // value of each non-zero element
-    {% for data in ode.spjacdata -%}
-        {{ data | stmwrap(80, 8) }}
+    {% for data in ode.jac.vals -%}
+        data[{{loop.index0}}] = {{ data | stmwrap(80, 8) }};
     {% endfor %}
 
     // clang-format on
